@@ -26,6 +26,9 @@ New in spot 2.12.0.dev (not yet released)
     edges leading to dead-ends.  See the description of
     restrict_dead_end_edges_here() below.
 
+  - autfilt learned --track-formula=F to label states with formulas
+    derived from F.  (This is more precise on deterministic automata.)
+
   - ltlfilt learned --pi1, --sigma1, --delta1, --pi2, --sigma2, and
     --delta2 to filter according to classes Π₁,Σ₁,Δ₁,Π₂,Σ₂, and Δ₂.
 
